[package]
name = "menoh-sys"
version = "0.1.4"
authors = ["Toru Ogawa <ogawa@preferred.jp>"]
repository = "https://github.com/pfnet-research/menoh-rs"
license = "MIT"
readme = "../README.md"
description = "Low-level binding for Menoh."
build = "build.rs"
exclude = ["**/*.bash"]

[dependencies]

[build-dependencies]
pkg-config = "0.3"
