[package]
name = "menoh-sys"
version = "0.2.0"
authors = ["Toru Ogawa <ogawa@preferred.jp>"]
edition = "2018"
repository = "https://github.com/pfnet-research/menoh-rs"
license = "MIT"
readme = "../README.md"
description = "Low-level binding for Menoh."
build = "build.rs"
exclude = ["**/*.sh"]

[dependencies]

[build-dependencies]
pkg-config = "0.3"
