[package]
name = "menoh"
version = "0.1.0"
authors = ["Toru Ogawa <ogawa@preferred.jp>"]
repository = "https://github.com/Hakuyume/menoh-rs"
license-file = "../LICENSE"
readme = "../README.md"
description = "A binding for Menoh."

[dependencies]
menoh-sys = "0.1"

[dev-dependencies]
docopt = "1.0"
image = "0.19"
serde = "1.0"
serde_derive = "1.0"
