[package]
name = "menoh"
version = "0.2.0"
authors = ["Toru Ogawa <ogawa@preferred.jp>"]
edition = "2018"
repository = "https://github.com/pfnet-research/menoh-rs"
license = "MIT"
readme = "../README.md"
description = "Binding for Menoh."
exclude = ["**/*.py"]

[dependencies]
menoh-sys = { path = "../menoh-sys", version = "0.2" }

[dev-dependencies]
docopt = "1.0"
image = "0.20"
serde = "1.0"
serde_derive = "1.0"
